get export working

--- a/src/app.html
+++ b/src/app.html
@@ -17,8 +17,8 @@
             box-sizing: border-box;
         }
     </style>
-    <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
-    <link rel="icon" type="image/gif" href="text.gif">
+    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
+    <link rel="icon" type="image/gif" href="/text.gif">
 
     <!-- This contains the contents of the <svelte:head> component, if
 	     the current page has one -->
