--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
             padding: 0;
             font-family: Courier, monospace;
         }
-        
+
         * {
             box-sizing: border-box;
         }
@@ -22,12 +22,12 @@
 
     <!-- This contains the contents of the <svelte:head> component, if
 	     the current page has one -->
-    %svelte.head%
+    %sveltekit.head%
 </head>
 
 <body>
     <div id="svelte">
-        %svelte.body%
+        %sveltekit.body%
     </div>
 </body>
 
